--- a/payroll_register_payment/views/register_payment_payroll.xml
+++ b/payroll_register_payment/views/register_payment_payroll.xml
@@ -29,7 +29,8 @@
             <field name="inherit_id" ref="account.view_account_payment_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='date']" position="after">
-                        <field name="payroll_slip_id"/>
+                        <field name="payroll_slip_id" attrs="{'invisible': [('visible_payroll_slip_id', '=', True)]}"/>
+                        <field name="visible_payroll_slip_id" invisible="1"/>
                 </xpath>
             </field>
         </record>
