--- a/payroll_register_payment/views/register_payment_payroll.xml
+++ b/payroll_register_payment/views/register_payment_payroll.xml
@@ -30,7 +30,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='date']" position="after">
                         <field name="payroll_slip_id" attrs="{'invisible': [('visible_payroll_slip_id', '=', False)]}"/>
-<!--                         <field name="visible_payroll_slip_id" invisible="1"/> -->
+                        <field name="visible_payroll_slip_id" invisible="1"/>
                 </xpath>
             </field>
         </record>
