--- a/payroll_register_payment/views/register_payment_payroll.xml
+++ b/payroll_register_payment/views/register_payment_payroll.xml
@@ -30,7 +30,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//button[@name='action_validate']" position="after">
                     <button string="Register Payment" name="batch_register_payment" type="object" class="oe_highlight"
-                            attrs="{'invisible':['|',('batch_payment_id','!=',False),('state','!=','done')]}"/>
+                            attrs="{'invisible':[('state','!=','done')]}"/>
                 </xpath>
                 <xpath expr="//field[@name='company_id']" position="before">
                     <field name="is_batch_paid" readonly="1"/>
