--- a/payroll_register_payment/views/register_payment_payroll.xml
+++ b/payroll_register_payment/views/register_payment_payroll.xml
@@ -25,12 +25,12 @@
         
         <record id="hr_payslip_run_form_payment11" model="ir.ui.view">
             <field name="name">hr.payslip.run.form.payment11</field>
-            <field name="model">hr.payslip</field>
+            <field name="model">hr.payslip.run</field>
             <field name="inherit_id" ref="hr_payroll.hr_payslip_run_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//button[@name='action_validate']" position="after">
                     <button string="Register Payment" name="batch_register_payment" type="object" class="oe_highlight"
-                            attrs="{'invisible':[('state','!=','done')]}"/>
+                            attrs="{'invisible':['|',('batch_payment_id','!=',False), ('state','!=','done')]}"/>
                 </xpath>
                 <xpath expr="//field[@name='company_id']" position="before">
                     <field name="is_batch_paid" readonly="1"/>
