--- a/payroll_register_payment/views/register_payment_payroll.xml
+++ b/payroll_register_payment/views/register_payment_payroll.xml
@@ -28,7 +28,7 @@
             <field name="model">hr.payslip.run</field>
             <field name="inherit_id" ref="hr_payroll.hr_payslip_run_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//button[@name='action_validate']" position="after">
+                <xpath expr="//button[@name='action_draft']" position="before">
                     <button string="Register Payment" name="batch_register_payment" type="object" class="oe_highlight"
                             attrs="{'invisible':[('state','!=','done')]}"/>
                 </xpath>
