--- a/payroll_register_payment/views/register_payment_payroll.xml
+++ b/payroll_register_payment/views/register_payment_payroll.xml
@@ -29,7 +29,7 @@
             <field name="inherit_id" ref="hr_payroll.hr_payslip_run_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//button[@name='action_draft']" position="before">
-                    <button string="Register Payment" name="batch_register_payment" type="object" class="oe_highlight" attrs="{'invisible':['|',('batch_payment_id','!=',False),('state','!=','close')]}"/>
+                    <button string="Register Payment" name="batch_register_payment" type="object" class="oe_highlight" attrs="{'invisible':['|',('is_batch_paid','!=',False),('state','!=','close')]}"/>
                 </xpath>
                 <xpath expr="//field[@name='company_id']" position="before">
                     <field name="is_batch_paid" readonly="1"/>
