--- a/payroll_register_payment/views/register_payment_payroll.xml
+++ b/payroll_register_payment/views/register_payment_payroll.xml
@@ -45,7 +45,17 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='date']" position="after">
                         <field name="payroll_slip_id" attrs="{'invisible': [('payroll_slip_id', '=', False)]}"/>
-                        <field name="visible_payroll_slip_id" invisible="1"/>
+                </xpath>
+            </field>
+        </record>
+        
+        <record id="view_payroll_batch_payment_form_ec" model="ir.ui.view">
+            <field name="name">view_payroll_batch_payment_form_ec</field>
+            <field name="model">account.batch.payment</field>
+            <field name="inherit_id" ref="account_batch_payment.view_batch_payment_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='date']" position="after">
+                        <field name="payroll_batch_id" attrs="{'invisible': [('payroll_batch_id', '=', False)]}"/>
                 </xpath>
             </field>
         </record>
