--- a/payroll_register_payment/views/register_payment_payroll.xml
+++ b/payroll_register_payment/views/register_payment_payroll.xml
@@ -49,7 +49,7 @@
             </field>
         </record>
         
-        <record id="view_payroll_batch_payment_form_ec" model="ir.ui.view">
+<!--         <record id="view_payroll_batch_payment_form_ec" model="ir.ui.view">
             <field name="name">view_payroll_batch_payment_form_ec</field>
             <field name="model">account.batch.payment</field>
             <field name="inherit_id" ref="account_batch_payment.view_batch_payment_form"/>
@@ -58,6 +58,6 @@
                         <field name="payroll_batch_id"/>
                 </xpath>
             </field>
-        </record>
+        </record> -->
     </data>
 </odoo>
