--- a/erp_acounting_payment_currency/views/account_batch_payment_views.xml
+++ b/erp_acounting_payment_currency/views/account_batch_payment_views.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-	<record id="azk_acounting_payment_currency_batch_form_inherit" model="ir.ui.view">
+<!-- 	<record id="azk_acounting_payment_currency_batch_form_inherit" model="ir.ui.view">
 		<field name="name">azk_acounting_payment_currency.account.batch.payment.form.inherit</field>
 		<field name="model">account.batch.payment</field>
 		<field name="inherit_id" ref="account_batch_payment.view_batch_payment_form" />
@@ -13,5 +13,5 @@
 	            </div>
 			</xpath>
 		</field>
-	</record>
+	</record> -->
 </odoo>
