--- a/erp_acounting_payment_currency/views/account_payment_wizard.xml
+++ b/erp_acounting_payment_currency/views/account_payment_wizard.xml
@@ -5,13 +5,12 @@
 			<field name="model">account.payment.register</field>
 			<field name="inherit_id" ref="account.view_account_payment_register_form" />
 			<field name="arch" type="xml">
-				<xpath expr="//label[@for='amount']" position="before">
-					<label for="account_amount"/>
+				<xpath expr="//field[@name='amount']" position="after">
+					<field name="account_amount" required="1"/>
 					<div name="account_amount_div" class="o_row">
-                       	<field name="account_currency_id" readonly="1"/>
-						<field name="account_amount" required="1"/>
+						<field name="account_currency_id" readonly="1"/>
 					</div>
-                   	<field name="company_currency_id" invisible="1"/>
+                   			<field name="company_currency_id" invisible="1"/>
 				</xpath>
 			</field>
 		</record>
