--- a/erp_acounting_payment_currency/views/account_payment_wizard.xml
+++ b/erp_acounting_payment_currency/views/account_payment_wizard.xml
@@ -18,20 +18,19 @@
 		</record>
         
         
-<!--         <record id="wizard_register_payment_form" model="ir.ui.view">
+         	<record id="wizard_register_payment_form" model="ir.ui.view">
 			<field name="name">azk_accounting_payment_currency_wizard.account.payment.invoice.form_inherit</field>
-			<field name="model">hr.expense.sheet.register.payment.wizard</field>
-			<field name="inherit_id" ref="hr_expense.hr_expense_sheet_register_payment_view_form" />
+			<field name="model">account.payment.register</field>
+			<field name="inherit_id" ref="account.view_account_payment_register_form" />
 			<field name="arch" type="xml">
 				<xpath expr="//div[@name='amount_div']" position="after">
-                    <field name="account_amount_values"/>
-                    <field name="account_amount_currency_id"/>
-					
+                    			<field name="account_amount_values"/>
+                    			<field name="account_amount_currency_id"/>	
 				</xpath>
 			</field>
 		</record>
         
-        <record id="hr_ecp_form_view" model="ir.ui.view">
+<!--        <record id="hr_ecp_form_view" model="ir.ui.view">
 			<field name="name">hr.exp</field>
 			<field name="model">hr.expense.sheet</field>
 			<field name="inherit_id" ref="hr_expense.view_hr_expense_sheet_form" />
