--- a/erp_acounting_payment_currency/views/account_payment_wizard.xml
+++ b/erp_acounting_payment_currency/views/account_payment_wizard.xml
@@ -35,8 +35,8 @@
 			<field name="model">hr.expense.sheet</field>
 			<field name="inherit_id" ref="hr_expense.view_hr_expense_sheet_form" />
 			<field name="arch" type="xml">
-			<xpath expr="//button[@name='%(hr_expense.hr_expense_sheet_register_payment_wizard_action)d']" position="replace">
-			    <button name="%(hr_expense.hr_expense_sheet_register_payment_wizard_action)d" type="action" string="Register Payment" class="oe_highlight o_expense_sheet_pay" attrs="{'invisible': [('state', '!=', 'post')]}" context="{'default_amount': total_amount, 'partner_id': address_id, 'default_account_amount_values':account_amount_value,
+			<xpath expr="//button[@name='%(hr_expense.action_register_payment)d']" position="replace">
+			    <button name="%(hr_expense.action_register_payment)d" type="action" string="Register Payment" class="oe_highlight o_expense_sheet_pay" attrs="{'invisible': [('state', '!=', 'post')]}" context="{'default_amount': total_amount, 'partner_id': address_id, 'default_account_amount_values':account_amount_value,
 			   'default_account_amount_currency_id' : account_currency}" groups="account.group_account_manager"/>
 			</xpath>
 				<xpath expr="//group[@name='expense_total']" position="inside">
