--- a/az_partner_location_auto_create/views/res_company_view.xml
+++ b/az_partner_location_auto_create/views/res_company_view.xml
@@ -5,7 +5,7 @@
 <!-- 		<field name="groups_id" eval="[(6, 0, [ref('default_customer_locatin_config')])]"/> -->
 		<field name="inherit_id" ref="base.view_company_form" />
 		<field name="arch" type="xml">
-			<xpath expr="//page[1]" position="after">
+			<xpath expr="//page[@name='general_info']" position="after">
 				<page string="Inventory Settings" name="inventory_settings">
 					
 	                <div class="o_row">
