--- a/az_partner_location_auto_create/views/res_company_view.xml
+++ b/az_partner_location_auto_create/views/res_company_view.xml
@@ -1,5 +1,5 @@
 <odoo>
-<!-- 	<record id="res_company_form_inherited" model="ir.ui.view">
+	<record id="res_company_form_inherited" model="ir.ui.view">
 		<field name="name">res.company.form.inherit</field>
 		<field name="model">res.company</field>
 		<field name="groups_id" eval="[(6, 0, [ref('default_customer_locatin_config')])]"/>
@@ -36,5 +36,5 @@
 				</page>
 			</xpath>
 		</field>
-	</record> -->
+	</record>
 </odoo>
